# rh_sensor

./: .gitattributes  rh_sensor_key.pem  west.yml
.git-crypt/keys/default/0/: 4A083533E9F1A6A20C1F1462435E8E8384A53E4D.gpg
.github/workflows/: build.yml
app/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf  sample.yaml  sysbuild.conf
app/boards/: adafruit_feather_nrf52840.conf  adafruit_feather_nrf52840.overlay  custom_plank.conf  esp32c3_devkitm.conf  esp32c3_devkitm.overlay
app/c_src/: board_init.c  main.c  rht_sensor_init.c  wifi_bridge.c  zbus_bridge.c
app/src/: application.rs  board_init.c  comm.rs  driver.rs  lib.rs  main.c  mqtt.rs  rht_sensor_init.rs  sensor_init.c  sensor_init.rs  wifi.c
app/src/driver/: rht_sensor.rs  sht3xd.rs
app/src/drivers/: rht_sensor.rs
app/src/rht_sensor/: mod.rs  onewire.rs  rht_sensor.rs  sht3x.rs
app/sysbuild/: mcuboot.conf
doc/: Doxyfile  RhSensorInRust.drawio  RhSensorInRust.drawio.html  RhSensorInRust_v2.drawio.html  app_overview.rst  conf.py  index.rst  notes.rst  openocd.rst  zephyr.rst
drivers/: CMakeLists.txt
drivers/sensor/example_sensor/: example_sensor.c
drivers/wifi/: CMakeLists.txt
include/app/: sensor_data.h  wifi_settings.h
scripts/: flashtarget.sh  start_debugserver.sh
