# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2024"
description = "RH Sensor - Written in Rust"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = "0.1.0"
log = "0.4.22"
zephyr-sys = { version = "0.1.0", path = "../../modules/lang/rust/zephyr-sys" }

[build-dependencies]
zephyr-build = "0.1.0"